Analytic mem mgmt cleanup

Following on from IMPALA-7403, clean up some of memory management
in AnalyticEvalNode.

Remove an unnecessary MemPool and avoid reallocating tuples
unnecessarily in Reset(). Also switch to inline initialization
of members.

Testing:
Ran exhaustive tests

Change-Id: Id16beb2d0b9d4315f52dd45203649252c0eb06b0
Reviewed-on: http://gerrit.cloudera.org:8080/11203
Reviewed-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>
Tested-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>